force-app/main/default/objects/Store__c/fields/Address_Province__c.field-meta.xml
<CustomField>
    <fullName>Address_Province__c</fullName>
    <label>Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>