force-app/main/default/objects/Store__c/fields/Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>