force-app/main/default/objects/Store__c/fields/Ceased__c.field-meta.xml
<CustomField>
    <fullName>Ceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ceased</label>
    <type>Checkbox</type>
</CustomField>