force-app/main/default/objects/Store__c/fields/ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate__c</fullName>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>