force-app/main/default/objects/Store__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>Date and time when the record was created.</description>
    <label>Created On</label>
    <type>DateTime</type>
</CustomField>