force-app/main/default/objects/Store__c/fields/CRM_Area__c.field-meta.xml
<CustomField>
    <fullName>CRM_Area__c</fullName>
    <label>CRM Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRM_Area</valueSetName>
    </valueSet>
</CustomField>