force-app/main/default/objects/Store__c/fields/E_Mail__c.field-meta.xml
<CustomField>
    <fullName>E_Mail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>