force-app/main/default/objects/Store__c/fields/Is_Digital_Signature_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Digital_Signature_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Digital Signature Enabled</label>
    <type>Checkbox</type>
</CustomField>