force-app/main/default/objects/Store__c/fields/Is_Xstore__c.field-meta.xml
<CustomField>
    <fullName>Is_Xstore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Xstore</label>
    <type>Checkbox</type>
</CustomField>