force-app/main/default/objects/Store__c/fields/Licensed__c.field-meta.xml
<CustomField>
    <fullName>Licensed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensed</label>
    <type>Checkbox</type>
</CustomField>