force-app/main/default/objects/Store__c/fields/Local_Save_CRM__c.field-meta.xml
<CustomField>
    <fullName>Local_Save_CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Save CRM</label>
    <type>Checkbox</type>
</CustomField>