force-app/main/default/objects/Store__c/fields/Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Opening_Date__c</fullName>
    <label>Opening Date</label>
    <type>DateTime</type>
</CustomField>