force-app/main/default/objects/Store__c/fields/Retail_ID__c.field-meta.xml
<CustomField>
    <fullName>Retail_ID__c</fullName>
    <externalId>true</externalId>
    <label>Retail ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>