force-app/main/default/objects/Store__c/fields/Store_Brand__c.field-meta.xml
<CustomField>
    <fullName>Store_Brand__c</fullName>
    <label>Store Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>