force-app/main/default/objects/Store__c/fields/Store_Group__c.field-meta.xml
<CustomField>
    <fullName>Store_Group__c</fullName>
    <label>Store Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>