force-app/main/default/objects/Store__c/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <description>Unique identifier for Store Type associated with Store.</description>
    <label>Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
                <label>Boutique</label>
            </value>
            <value>
                <fullName>E1</fullName>
                <label>Boutique ECommerce</label>
            </value>
            <value>
                <fullName>C1</fullName>
                <label>Corner</label>
            </value>
            <value>
                <fullName>DP</fullName>
                <label>Digital Touch Point</label>
            </value>
            <value>
                <fullName>DF1</fullName>
                <label>Duty Free</label>
            </value>
            <value>
                <fullName>F1</fullName>
                <label>Family Sales</label>
            </value>
            <value>
                <fullName>FF</fullName>
                <label>FF Concession</label>
            </value>
            <value>
                <fullName>FOU</fullName>
                <label>Franchaisee</label>
            </value>
            <value>
                <fullName>IC</fullName>
                <label>Intercompany sales</label>
            </value>
            <value>
                <fullName>L1</fullName>
                <label>Logistic</label>
            </value>
            <value>
                <fullName>O1</fullName>
                <label>Outlet Store</label>
            </value>
            <value>
                <fullName>W1</fullName>
                <label>Warehouse Retail</label>
            </value>
            <value>
                <fullName>TP</fullName>
                <label>Xpert 3rd parties sales</label>
            </value>
            <value>
                <fullName>TRF</fullName>
                <label>Xpert Transfer FPS to outlet intracompany</label>
            </value>
            <value>
                <fullName>UNF</fullName>
                <label>Xpert Transfer  Uniform/Clothing to employee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>