force-app/main/default/objects/Store__c/fields/Tech_Source_LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>Tech_Source_LastUpdate__c</fullName>
    <label>Tech Source LastUpdate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tech_Source_LastUpdate</valueSetName>
    </valueSet>
</CustomField>