force-app/main/default/objects/Store__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>TimeZone</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>