force-app/main/default/objects/Store__c/fields/Xstore_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Xstore_Start_Date__c</fullName>
    <label>Xstore Start Date</label>
    <type>DateTime</type>
</CustomField>