force-app/main/default/objects/Store__c/listViews/Store_List_View.listView-meta.xml
<ListView>
    <fullName>Store_List_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Store List View</label>
</ListView>